# ai_anytime_opensource_pdf_search

./: .gitignore  Makefile  pyproject.toml  readme.md  requirements.txt
app/: app.py  constants.py  ingest.py
